--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,20 @@
 .btn{
     background-color: rgb(229, 9, 20);
 }
+
+
+/* Custom CSS */
+body, html {
+    height: 100%;
+}
+
+.full-screen-image {
+    background-image: url('../src//assets/cat.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+    padding:5rem 3rem;
+    filter: drop-shadow(5px);
+
+}
